# Data-Structure

./: TD1.1.rar  gitignore
Partie1_text/: CMakeLists.txt  btree.c  btree.h  cours1.txt  main.c  queue.c  queue.h  slist.c  slist.h
TD1.1/TD1.1/: CMakeLists.txt  Queue.c  Queue.h  SList.c  SList.h  main.c  tree.c  tree.h
TP_entrainement/: CMakeLists.txt  main.c  slist.c  slist.h
Training/: CMakeLists.txt  Queue.c  Queue.h  SList.c  SList.h  main_btree.c  main_slist.c  tree.c  tree.h
allocation_memory/: CMakeLists.txt  main.c
projet/ev_project_starter_v2/: CMakeLists.txt  slist.h  stack.c  stack.h  station_index.h
projet/projet_ds/: CMakeLists.txt  Events.c  Events.h  Queue.c  Queue.h  SList.c  SList.h  Stack.c  Stack.h  csv_loader.c  csv_loader.h  main.c  nary.c  nary.h  rules.c  station_index.c  station_index.h
stack/: CMakeLists.txt  main.c  stack.c  stack.h
typedef/: CMakeLists.txt  main.c
